Added second viz

--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<canvas id="swarm" style="width: 600px; height: 500px"></canvas>
+<div id="swarm" style="width: 600px; height: 500px"></div>
 <script src="swarm.js"></script>
